@@ -1,9 +1,17 @@
 package psa.cargahoras.service;
 
+import java.time.DayOfWeek;
+import java.time.LocalDate;
+import java.time.temporal.TemporalAdjusters;
 import java.util.List;
+import java.util.Map;
+import java.util.Set;
+import java.util.stream.Collectors;
+import java.util.stream.Stream;
 import org.springframework.stereotype.Service;
 import psa.cargahoras.dto.CargaDeHorasPorRecursoDTO;
 import psa.cargahoras.dto.ProyectoDTO;
+import psa.cargahoras.dto.RecursoDTO;
 import psa.cargahoras.dto.TareaDTO;
 import psa.cargahoras.entity.CargaDeHoras;
 import psa.cargahoras.repository.CargaDeHorasRepository;
@@ -36,93 +44,113 @@ public class CargaDeHorasService {
     List<TareaDTO> tareasDelProyecto =
         apiExternaService.getTareas().stream()
             .filter(tarea -> tarea.getProyectoId().equals(proyectoId))
-            .toList();
+            .collect(Collectors.toList());
+
+    Set<String> tareaIdsDelProyecto =
+        tareasDelProyecto.stream().map(TareaDTO::getId).collect(Collectors.toSet());
 
     List<CargaDeHoras> cargasDeHoras =
         cargaHorasRepository.findAll().stream()
-            .filter(
-                carga ->
-                    tareasDelProyecto.stream()
-                        .anyMatch(tarea -> tarea.getId().equals(carga.getTareaId())))
-            .toList();
+            .filter(carga -> tareaIdsDelProyecto.contains(carga.getTareaId()))
+            .collect(Collectors.toList());
 
     return cargasDeHoras;
   }
 
-  public List<CargaDeHorasPorRecursoDTO> obtenerCargasDeHorasPorRecurso(String recursoId) {
-    boolean existeRecurso =
-        apiExternaService.getRecursos().stream()
-            .anyMatch(recurso -> recurso.getId().equals(recursoId));
+  public List<CargaDeHorasPorRecursoDTO> obtenerCargasDeHorasPorRecurso(
+      String recursoId, LocalDate fechaBusqueda) {
+    Set<String> recursos =
+        apiExternaService.getRecursos().stream().map(RecursoDTO::getId).collect(Collectors.toSet());
 
-    if (!existeRecurso) {
+    if (!recursos.contains(recursoId)) {
       throw new IllegalArgumentException("No existe el recurso con ID: " + recursoId);
     }
 
-    List<CargaDeHoras> cargas =
+    Stream<CargaDeHoras> cargasDeRecurso =
         cargaHorasRepository.findAll().stream()
-            .filter(carga -> carga.getRecursoId().equals(recursoId))
-            .toList();
+            .filter(carga -> carga.getRecursoId().equals(recursoId));
+
+    if (fechaBusqueda != null) {
+      LocalDate inicioSemana =
+          fechaBusqueda.with(TemporalAdjusters.previousOrSame(DayOfWeek.SUNDAY));
+      LocalDate finSemana = fechaBusqueda.with(TemporalAdjusters.nextOrSame(DayOfWeek.SATURDAY));
+
+      cargasDeRecurso =
+          cargasDeRecurso.filter(
+              carga -> {
+                return (carga.getFechaCarga().isEqual(inicioSemana)
+                    || carga.getFechaCarga().isEqual(finSemana)
+                    || (carga.getFechaCarga().isAfter(inicioSemana)
+                        && carga.getFechaCarga().isBefore(finSemana)));
+              });
+    }
 
     List<TareaDTO> tareas = apiExternaService.getTareas();
     List<ProyectoDTO> proyectos = apiExternaService.getProyectos();
 
-    return cargas.stream()
+    Map<String, TareaDTO> tareaMap =
+        tareas.stream().collect(Collectors.toMap(TareaDTO::getId, tarea -> tarea));
+
+    Map<String, ProyectoDTO> proyectoMap =
+        proyectos.stream().collect(Collectors.toMap(ProyectoDTO::getId, proyecto -> proyecto));
+
+    return cargasDeRecurso
         .map(
             carga -> {
-              String proyectoId =
-                  tareas.stream()
-                      .filter(t -> t.getId().equals(carga.getTareaId()))
-                      .findFirst()
-                      .map(TareaDTO::getProyectoId)
-                      .orElse(null);
+              TareaDTO tarea = tareaMap.get(carga.getTareaId());
+              String tareaNombre = tarea != null ? tarea.getNombre() : null;
+              String proyectoId = tarea != null ? tarea.getProyectoId() : null;
 
               String nombreProyecto =
-                  proyectos.stream()
-                      .filter(p -> p.getId().equals(proyectoId))
-                      .findFirst()
-                      .map(ProyectoDTO::getNombre)
-                      .orElse("Proyecto no encontrado");
+                  proyectoId != null
+                      ? proyectoMap.getOrDefault(proyectoId, new ProyectoDTO()).getNombre()
+                      : "Proyecto no encontrado";
 
               return new CargaDeHorasPorRecursoDTO(
                   carga.getId(),
                   carga.getTareaId(),
+                  tareaNombre,
                   carga.getCantidadHoras(),
                   carga.getFechaCarga(),
                   nombreProyecto);
             })
-        .toList();
+        .collect(Collectors.toList());
   }
 
   public CargaDeHoras cargarHoras(CargaDeHoras nuevaCarga) {
+    List<TareaDTO> tareas = apiExternaService.getTareas();
+    List<String> recursos =
+        apiExternaService.getRecursos().stream()
+            .map(recurso -> recurso.getId())
+            .collect(Collectors.toList());
+
     boolean existeTarea =
-        apiExternaService.getTareas().stream()
-            .anyMatch(tarea -> tarea.getId().equals(nuevaCarga.getTareaId().toString()));
+        tareas.stream().anyMatch(tarea -> tarea.getId().equals(nuevaCarga.getTareaId().toString()));
 
     if (!existeTarea) {
       throw new IllegalArgumentException("No existe la tarea con ID: " + nuevaCarga.getTareaId());
     }
 
-    boolean existeRecurso =
-        apiExternaService.getRecursos().stream()
-            .anyMatch(recurso -> recurso.getId().equals(nuevaCarga.getRecursoId().toString()));
+    boolean existeRecurso = recursos.contains(nuevaCarga.getRecursoId().toString());
 
     if (!existeRecurso) {
       throw new IllegalArgumentException(
           "No existe el recurso con ID: " + nuevaCarga.getRecursoId());
     }
 
-    List<CargaDeHoras> cargasExistentes =
-        cargaHorasRepository.findByTareaId(nuevaCarga.getTareaId());
-
-    if (!cargasExistentes.isEmpty()
-        && !cargasExistentes.get(0).getRecursoId().equals(nuevaCarga.getRecursoId())) {
-      throw new IllegalArgumentException(
-          "Esta tarea ya está asignada al recurso con ID: "
-              + cargasExistentes.get(0).getRecursoId());
-    }
-
     cargaHorasRepository.save(nuevaCarga);
 
     return nuevaCarga;
+  }
+
+  public void eliminarCargaDeHoras(String cargaId) {
+    CargaDeHoras carga =
+        cargaHorasRepository
+            .findById(cargaId)
+            .orElseThrow(
+                () ->
+                    new IllegalArgumentException("No existe la carga de horas con ID: " + cargaId));
+
+    cargaHorasRepository.delete(carga);
   }
 }
